# jb_kmp_for_graphite

./: README.md
cpp/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h  matrix_c.cpp  matrix_c.h  matrix_jni.cpp
kmp/: settings.gradle.kts
kmp/gradle/wrapper/: gradle-wrapper.properties
kmp/shared/: build.gradle.kts
kmp/shared/src/commonMain/kotlin/: DenseMatrix.kt
kmp/shared/src/jvmMain/kotlin/: DenseMatrix.jvm.kt  Main.kt
kmp/shared/src/jvmTest/kotlin/: MatrixJmvTest.kt
kmp/shared/src/nativeInterop/cinterop/: matrix.def
kmp/shared/src/nativeMain/kotlin/: DenseMatrix.native.kt  Main.kt
kmp/shared/src/nativeTest/kotlin/: MatrixNativeTest.kt
